deleted pkg module and moved everything to user service
